# Dune-RAG

./: .gitignore  README.md  __init__.py  app.py  docker-compose.yml  generator.py  guia_rack_rag_gratuita.txt  loader.py  pyproject.toml  requirements-test.txt  requirements.txt  retriever.py  test_local.py
api/: .dockerignore  Dockerfile  __init__.py  main.py  requirements.txt
api/pipelines/: __init__.py  arthur_pipeline.py  cloud_query.py  ingestion.py  query.py
api/routes/: __init__.py  arthur.py  arthur_simulation.py  health.py  ingest.py  query.py
api/schemas/: ingest.py  query.py
data/: complete_lore.md  encyclopedia.md  rules.md  units.md
data/eval/: README.md  eval_dataset.py  sample_dataset.json
frontend/: Dockerfile  index.html  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  types.ts
frontend/src/components/: ChatInterface.css  ChatInterface.tsx  Header.css  Header.tsx  IngestPanel.css  IngestPanel.tsx  StatusBar.css  StatusBar.tsx
ingest/: __init__.py  arthur_learner.py  chunking.py  crawl4ai_worker.py  docling_worker.py  embedding.py  game_simulator.py  hf_inference.py  indexer.py  personality.py  supabase_vector.py
rag/: chunker.py
scripts/: create_collection.py  index_all_docs.py  index_docs.py  index_encyclopedia.py  index_lore.py  ingest_folder.py  pull_model.sh  run_eval.py  start_dev.bat  start_dev.ps1  test_arthur_system.py  test_ollama.py  test_query.py
services/: personality.py
