[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dune-rag"
version = "1.0.0"
description = "RAG para Dune Chatbot"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "huggingface-hub>=0.25.0",
    "supabase>=2.0.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
]

[project.urls]
Homepage = "https://github.com/DUNE-ORGANIZATION-JJCA/Dune-RAG"